--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p class="contact">
           <a href="mailto:bryantmarshae8@gmail.com">bryantmarshae8@gmail.com</a>
           <a href="tel:+16143269342">(614) 326‑9342</a>
-          <a href="https://www.linkedin.com/in/marshae-bryant/" target="_blank">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/marshae-bryant/" target="_blank" rel="noreferrer">linkedin.com/in/marshae-bryant</a>
         </p>
       </div>
       <div class="cta">
@@ -107,14 +107,44 @@
       <aside class="card">
         <h2>Skills</h2>
         <div class="chips">
+          <span class="chip">IDS/IPS (Snort, Suricata)</span>
+          <span class="chip">Vulnerability Scanning (Nmap, Wireshark)</span>
+          <span class="chip">SIEM (Splunk)</span>
           <span class="chip">AWS (IAM, EC2, S3)</span>
-          <span class="chip">IDS/IPS · Snort</span>
-          <span class="chip">Terraform</span>
-          <span class="chip">SIEM · Splunk</span>
-          <span class="chip">Networking · VPC</span>
+          <span class="chip">Security Groups</span>
+          <span class="chip">Networking</span>
+          <span class="chip">Google Cloud</span>
+          <span class="chip">Threat Analysis</span>
           <span class="chip">Incident Response</span>
-          <span class="chip">Pentesting Tools</span>
-          <span class="chip">Customer Advocacy</span>
+          <span class="chip">Data Protection (NIST, ISO 27001)</span>
+          <span class="chip">Linux</span>
+          <span class="chip">Windows</span>
+          <span class="chip">macOS</span>
+          <span class="chip">TCP/IP</span>
+          <span class="chip">DNS</span>
+          <span class="chip">HTTP/S</span>
+          <span class="chip">Firewalls</span>
+          <span class="chip">VPNs</span>
+          <span class="chip">VPC Configuration</span>
+          <span class="chip">Penetration Testing (Metasploit, Burp Suite)</span>
+          <span class="chip">Oracle</span>
+          <span class="chip">Zendesk</span>
+          <span class="chip">Jira</span>
+          <span class="chip">Salesforce</span>
+          <span class="chip">Google Workspace</span>
+          <span class="chip">Microsoft Office</span>
+          <span class="chip">Oasis</span>
+          <span class="chip">Ascension</span>
+          <span class="chip">Vitech</span>
+          <span class="chip">Citrix</span>
+          <span class="chip">Onesite</span>
+          <span class="chip">Yardi</span>
+          <span class="chip">Problem Solving</span>
+          <span class="chip">Escalation Resolution</span>
+          <span class="chip">Effective Communication</span>
+          <span class="chip">Compassion & Empathy</span>
+          <span class="chip">Customer Satisfaction</span>
+          <span class="chip">Operations</span>
         </div>
       </aside>
 
@@ -178,3 +208,4 @@
   </div>
 </body>
 </html>
+
