--- a/index.html
+++ b/index.html
@@ -4,207 +4,207 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Marshae Bryant — Résumé</title>
-  <!-- Futuristic, professional font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg: #000000;              /* black background */
-      --ink: #f3f3f3;             /* light text */
-      --muted: #a0a0a0;           /* muted text */
-      --accent1: #00f5d4;         /* aqua */
-      --accent2: #ff0266;         /* magenta */
-      --accent3: #3d5afe;         /* blue */
+      --bg: #000000;
+      --ink: #f3f3f3;
+      --muted: #a0a0a0;
+      --accent1: #00f5d4;
+      --accent2: #ff0266;
+      --accent3: #3d5afe;
       --line: #222;
       --card: #111;
       --shadow: 0 0 18px rgba(0,255,180,.25);
       --chip-bg: #1a1a1a;
       --radius-lg: 14px;
     }
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: "Inter", system-ui, sans-serif;
-      color:var(--ink);
-      background: var(--bg);
+    body{margin:0;font-family:"Inter",sans-serif;color:var(--ink);background:var(--bg);}
+    .page{max-width:1000px;margin:40px auto;padding:0 20px;}
+    .header{position:relative;background:var(--card);border:1px solid var(--line);border-radius:var(--radius-lg);box-shadow:var(--shadow);padding:28px;display:grid;grid-template-columns:1fr auto;gap:20px;}
+    .name{font-family:"Orbitron",sans-serif;font-size:clamp(28px,3vw,42px);font-weight:800;color:var(--accent1);text-transform:uppercase;}
+    .role{font-size:18px;color:var(--accent3);margin-top:6px;font-weight:600;}
+    .contact{display:flex;flex-wrap:wrap;gap:12px 18px;margin-top:14px;}
+    .contact a{color:var(--accent2);text-decoration:none;font-weight:600;}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:var(--radius-lg);padding:20px;box-shadow:var(--shadow);margin-top:22px;}
+    .card h2{font-family:"Orbitron",sans-serif;color:var(--accent2);font-size:18px;margin:0 0 12px;text-transform:uppercase;letter-spacing:1px;}
+    .item{display:grid;grid-template-columns:1fr auto;gap:8px 12px;padding:14px 0;border-bottom:1px dashed #333;}
+    .item:last-child{border-bottom:0;}
+    .item .title{font-weight:700;color:var(--accent1);}
+    .item .org{color:var(--muted);}
+    .item .dates{color:var(--accent3);font-weight:600;}
+    .bullets{margin:6px 0;padding-left:20px;}
+    .bullets li{margin:6px 0;}
+    .chips{display:flex;flex-wrap:wrap;gap:10px;}
+    .chip{background:var(--chip-bg);border:1px solid #333;padding:6px 10px;border-radius:999px;font-weight:600;font-size:13px;color:var(--accent1);}
+      /* ===== ATS Mode Overrides ===== */
+    [data-mode="ats"]{ background:#ffffff; color:#000000; }
+    [data-mode="ats"] .page{ max-width: 820px; }
+    [data-mode="ats"] .header,
+    [data-mode="ats"] .card{ background:#ffffff; border:1px solid #ddd; box-shadow:none; }
+    [data-mode="ats"] .name{ font-family: "Inter", system-ui, sans-serif; color:#111; text-transform:none; }
+    [data-mode="ats"] .role{ color:#111; }
+    [data-mode="ats"] .contact a{ color:#0a0a0a; text-decoration: underline; }
+    [data-mode="ats"] .card h2{ font-family: "Inter", system-ui, sans-serif; color:#111; letter-spacing:0; text-transform:none; }
+    [data-mode="ats"] .item .title{ color:#000; }
+    [data-mode="ats"] .item .org{ color:#222; }
+    [data-mode="ats"] .item .dates{ color:#000; }
+    [data-mode="ats"] .chip{ background:transparent; border:none; color:#000; padding:0; border-radius:0; }
+    [data-mode="ats"] .chips{ gap:6px; }
+    [data-mode="ats"] .chips .chip::after{ content:" •"; }
+    [data-mode="ats"] .chips .chip:last-child::after{ content:""; }
+
+    /* Print uses ATS mode */
+    @media print{
+      body{ background:#ffffff !important; color:#000 !important; }
+      .page{ max-width: 100%; margin:0; padding:0; }
+      .header, .card{ background:#ffffff !important; border:1px solid #ccc !important; box-shadow:none !important; }
+      .name{ font-family: "Inter", system-ui, sans-serif !important; color:#000 !important; text-transform:none !important; }
+      .card h2{ font-family: "Inter", system-ui, sans-serif !important; color:#000 !important; text-transform:none !important; letter-spacing:0 !important; }
+      .contact a{ color:#000 !important; text-decoration: underline !important; }
+      .chip{ background:transparent !important; border:none !important; color:#000 !important; padding:0 !important; border-radius:0 !important; }
     }
-    .page{ max-width: 1000px; margin: 40px auto; padding: 0 20px; }
-
-    /* Header */
-    .header{
-      position: relative;
-      background: var(--card);
-      border: 1px solid var(--line);
-      border-radius: var(--radius-lg);
-      box-shadow: var(--shadow);
-      padding: 28px;
-      display: grid; grid-template-columns: 1fr auto; gap: 20px;
-    }
-    .name{ font-family:"Orbitron", sans-serif; font-size: clamp(28px, 3vw, 42px); font-weight: 800; color: var(--accent1); text-transform: uppercase; }
-    .role{ font-size: 18px; color: var(--accent3); margin-top: 6px; font-weight: 600; }
-    .contact{ display:flex; flex-wrap:wrap; gap: 12px 18px; margin-top: 14px; }
-    .contact a{ color: var(--accent2); text-decoration: none; font-weight: 600; }
-    .cta{ align-self: start; display:flex; gap:12px; }
-    .btn{
-      border:1px solid var(--accent1); background: transparent;
-      color: var(--accent1); padding: 10px 14px; border-radius: 8px;
-      font-family: "Orbitron", sans-serif; font-weight:600; cursor:pointer;
-      transition: all .2s ease;
-    }
-    .btn.primary{ background: linear-gradient(135deg, var(--accent1), var(--accent2)); color:#000; }
-    .btn:hover{ transform: translateY(-2px) scale(1.02); box-shadow: 0 0 12px var(--accent1); }
-
-    /* Tech lines motif */
-    .header::after{
-      content:""; position:absolute; inset:0; background: linear-gradient(135deg, transparent 60%, rgba(0,245,212,.08) 100%);
-      pointer-events:none;
-    }
-
-    .grid{ display:grid; grid-template-columns: 1fr 1fr; gap: 22px; margin-top: 24px; }
-    @media(max-width:860px){ .grid{ grid-template-columns:1fr; } }
-
-    .card{ background: var(--card); border:1px solid var(--line); border-radius: var(--radius-lg); padding: 20px; box-shadow: var(--shadow); }
-    .card h2{ font-family:"Orbitron", sans-serif; color: var(--accent2); font-size: 18px; margin:0 0 12px; text-transform: uppercase; letter-spacing: 1px; }
-
-    .item{ display:grid; grid-template-columns: 1fr auto; gap:8px 12px; padding: 14px 0; border-bottom:1px dashed #333; }
-    .item:last-child{ border-bottom:0; }
-    .item .title{ font-weight:700; color: var(--accent1); }
-    .item .org{ color: var(--muted); }
-    .item .dates{ color: var(--accent3); font-weight:600; }
-    .bullets{ margin: 6px 0; padding-left: 20px; }
-    .bullets li{ margin: 6px 0; }
-
-    .chips{ display:flex; flex-wrap:wrap; gap: 10px; }
-    .chip{ background: var(--chip-bg); border: 1px solid #333; padding: 6px 10px; border-radius: 999px; font-weight: 600; font-size: 13px; color: var(--accent1); }
-
-    .foot{ text-align:center; font-size:12px; color: var(--muted); margin: 20px 0 40px; }
   </style>
 </head>
-<body>
+<body data-mode="visual">
   <div class="page">
     <header class="header">
       <div>
         <h1 class="name">Marshae Bryant</h1>
-        <p class="role">Cloud Security Engineer Candidate</p>
+        <p class="role">Cloud Security Analyst</p>
         <p class="contact">
           <a href="mailto:bryantmarshae8@gmail.com">bryantmarshae8@gmail.com</a>
           <a href="tel:+16143269342">(614) 326‑9342</a>
-          <a href="https://www.linkedin.com/in/marshae-bryant/" target="_blank" rel="noreferrer">linkedin.com/in/marshae-bryant</a>
+          <a href="https://www.linkedin.com/in/marshae-bryant/" target="_blank">linkedin.com/in/marshae-bryant</a>
         </p>
-      </div>
-      <div class="cta">
-        <button class="btn primary" onclick="window.print()">Print / Save PDF</button>
       </div>
     </header>
 
-    <main class="grid">
-      <section class="card">
-        <h2>Summary</h2>
-        <p>Proactive cloud security fellow with expertise in AWS, networking, and incident response. Experienced building secure cloud labs and client advocacy, blending technical depth with strong communication. Passionate about protecting organizations against evolving threats while delivering clear value to stakeholders.</p>
-      </section>
+    <section class="card" style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap;">
+      <button class="btn-switch" onclick="document.body.setAttribute('data-mode','visual')" aria-label="Switch to visual mode" style="border:1px solid #333;background:#0b0b0b;color:#f3f3f3;padding:8px 12px;border-radius:8px;cursor:pointer;">Visual Mode</button>
+      <button class="btn-switch" onclick="document.body.setAttribute('data-mode','ats')" aria-label="Switch to ATS-friendly mode" style="border:1px solid #ddd;background:#ffffff;color:#000;padding:8px 12px;border-radius:8px;cursor:pointer;">ATS Mode</button>
+      <button class="btn-switch" onclick="window.print()" aria-label="Print or save as PDF" style="border:1px solid #333;background:#111;color:#f3f3f3;padding:8px 12px;border-radius:8px;cursor:pointer;">Print / Save PDF</button>
+    </section>
 
-      <aside class="card">
-        <h2>Skills</h2>
-        <div class="chips">
-          <span class="chip">IDS/IPS (Snort, Suricata)</span>
-          <span class="chip">Vulnerability Scanning (Nmap, Wireshark)</span>
-          <span class="chip">SIEM (Splunk)</span>
-          <span class="chip">AWS (IAM, EC2, S3)</span>
-          <span class="chip">Security Groups</span>
-          <span class="chip">Networking</span>
-          <span class="chip">Google Cloud</span>
-          <span class="chip">Threat Analysis</span>
-          <span class="chip">Incident Response</span>
-          <span class="chip">Data Protection (NIST, ISO 27001)</span>
-          <span class="chip">Linux</span>
-          <span class="chip">Windows</span>
-          <span class="chip">macOS</span>
-          <span class="chip">TCP/IP</span>
-          <span class="chip">DNS</span>
-          <span class="chip">HTTP/S</span>
-          <span class="chip">Firewalls</span>
-          <span class="chip">VPNs</span>
-          <span class="chip">VPC Configuration</span>
-          <span class="chip">Penetration Testing (Metasploit, Burp Suite)</span>
-          <span class="chip">Oracle</span>
-          <span class="chip">Zendesk</span>
-          <span class="chip">Jira</span>
-          <span class="chip">Salesforce</span>
-          <span class="chip">Google Workspace</span>
-          <span class="chip">Microsoft Office</span>
-          <span class="chip">Oasis</span>
-          <span class="chip">Ascension</span>
-          <span class="chip">Vitech</span>
-          <span class="chip">Citrix</span>
-          <span class="chip">Onesite</span>
-          <span class="chip">Yardi</span>
-          <span class="chip">Problem Solving</span>
-          <span class="chip">Escalation Resolution</span>
-          <span class="chip">Effective Communication</span>
-          <span class="chip">Compassion & Empathy</span>
-          <span class="chip">Customer Satisfaction</span>
-          <span class="chip">Operations</span>
+    <section class="card">
+      <h2>Summary</h2>
+      <p>Cloud Security Analyst and Client Relations Advocate committed to ensuring confidentiality, integrity, and availability of organizational assets. Skilled in identifying and mitigating security risks, performing risk assessments, audits, and compliance reviews with adherence to NIST and ISO standards. Adept at customer advocacy, escalation resolution, and building secure cloud solutions.</p>
+    </section>
+
+    <section class="card">
+      <h2>Skills</h2>
+      <div class="chips">
+        <span class="chip">IDS/IPS (Snort, Suricata)</span>
+        <span class="chip">Vulnerability Scanning (Nmap, Wireshark)</span>
+        <span class="chip">SIEM (Splunk)</span>
+        <span class="chip">AWS (IAM, EC2, S3)</span>
+        <span class="chip">Security Groups · Networking</span>
+        <span class="chip">Google Cloud</span>
+        <span class="chip">Threat Analysis · Incident Response</span>
+        <span class="chip">NIST · ISO 27001</span>
+        <span class="chip">Linux · Windows · macOS</span>
+        <span class="chip">TCP/IP · DNS · HTTP/S</span>
+        <span class="chip">Firewalls · VPNs · VPC</span>
+        <span class="chip">Penetration Testing (Metasploit, Burp Suite)</span>
+        <span class="chip">Oracle · Zendesk · Jira</span>
+        <span class="chip">Salesforce · Google Workspace</span>
+        <span class="chip">Microsoft Office · Oasis · Vitech</span>
+        <span class="chip">Citrix · Onesite · Yardi</span>
+        <span class="chip">Customer Service & Escalations</span>
+      </div>
+    </section>
+
+    <section class="card">
+      <h2>Projects</h2>
+      <ul class="bullets">
+        <li>Configured Ubuntu home lab in Oracle VirtualBox for red/blue‑team exercises and compliance demonstrations.</li>
+        <li>Built Windows Server home lab configuring Active Directory for centralized identity management.</li>
+        <li>Deployed static website on AWS S3 bucket to host online résumé for recruiter access.</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>Experience</h2>
+      <div class="item">
+        <div>
+          <div class="title">Client Relations Advocate</div>
+          <div class="org">Family Medical Care Plan</div>
+          <ul class="bullets">
+            <li>Delivered exceptional customer experiences while managing multiple escalated patient appeals.</li>
+            <li>Handled, analyzed, and processed patient data with systems including Oasis, Vitech, Ascension, Citrix, ServiceNow, and Oracle.</li>
+            <li>Coordinated benefits with internal and external stakeholders to achieve positive outcomes.</li>
+            <li>Resolved time‑sensitive escalations ensuring compliance and high data accuracy.</li>
+            <li>Investigated root causes of payment errors/denials and recommended corrective actions.</li>
+            <li>Maintained above‑average survey scores with positive feedback from 95% of customers.</li>
+          </ul>
         </div>
-      </aside>
-
-      <section class="card" style="grid-column:1 / -1;">
-        <h2>Experience</h2>
-        <div class="item">
-          <div>
-            <div class="title">Client Relations Advocate</div>
-            <div class="org">Family Medical Care Plan</div>
-            <ul class="bullets">
-              <li>Managed escalated cases, ensuring timely resolution and compliance.</li>
-              <li>Analyzed patient data using enterprise systems to deliver accurate solutions.</li>
-              <li>Coordinated with stakeholders to streamline processes and outcomes.</li>
-            </ul>
-          </div>
-          <div class="dates">2024 — Present</div>
+        <div class="dates">09/2024 — Present</div>
+      </div>
+      <div class="item">
+        <div>
+          <div class="title">IT Support Intern</div>
+          <div class="org">Mentor Me Collective</div>
+          <ul class="bullets">
+            <li>Designed a ticketing system for troubleshooting and workflow management.</li>
+            <li>Performed SOX and operational audit tests under IIA Professional Practices Framework.</li>
+            <li>Tested IT internal controls; assessed execution of key controls and processes.</li>
+            <li>Conducted transaction and compliance testing; evaluated control documentation.</li>
+            <li>Presented audit findings and security recommendations to management.</li>
+          </ul>
         </div>
-
-        <div class="item">
-          <div>
-            <div class="title">IT Support Intern</div>
-            <div class="org">Mentor Me Collective</div>
-            <ul class="bullets">
-              <li>Built ticketing system for troubleshooting and audit tracking.</li>
-              <li>Conducted IT control testing and compliance reviews.</li>
-            </ul>
-          </div>
-          <div class="dates">2024 — 2025</div>
+        <div class="dates">07/2024 — 01/2025</div>
+      </div>
+      <div class="item">
+        <div>
+          <div class="title">Branch Office Manager</div>
+          <div class="org">ComFor Care Home Care</div>
+          <ul class="bullets">
+            <li>Owned employee lifecycle; reduced time‑to‑fill for roles by 25%.</li>
+            <li>Ensured day‑one regulatory compliance through thorough document review.</li>
+            <li>Launched digital marketing strategies increasing qualified patient leads by 33%.</li>
+            <li>Optimized schedules for 15–25 staff; improved coverage and efficiency.</li>
+            <li>Developed training materials improving team competency by 20%.</li>
+            <li>Strengthened onboarding and record‑keeping ensuring audit readiness.</li>
+          </ul>
         </div>
-      </section>
+        <div class="dates">11/2021 — 01/2023</div>
+      </div>
+    </section>
 
-      <section class="card">
-        <h2>Education</h2>
-        <div class="item">
-          <div>
-            <div class="title">Cybersecurity Fellowship</div>
-            <div class="org">The Knowledge House</div>
-          </div>
-          <div class="dates">2025 — Present</div>
+    <section class="card">
+      <h2>Education</h2>
+      <div class="item">
+        <div>
+          <div class="title">Cybersecurity Fellowship</div>
+          <div class="org">The Knowledge House</div>
+          <ul class="bullets">
+            <li>12‑month immersive program in network security, cloud security, and compliance.</li>
+            <li>Tools: Git, Docker, VS Code, Packet Tracer; OS: Linux, Ubuntu, Kali, Windows.</li>
+            <li>Built virtualized homelabs using VirtualBox and VMware; produced red/blue‑team reports.</li>
+            <li>Pursuing certifications: CompTIA Security+, AWS Cloud Practitioner, AWS Security Specialty.</li>
+          </ul>
         </div>
-        <div class="item">
-          <div>
-            <div class="title">B.S. Technology</div>
-            <div class="org">Bowling Green State University</div>
-          </div>
-          <div class="dates">2018</div>
+        <div class="dates">01/2025 — Present</div>
+      </div>
+      <div class="item">
+        <div>
+          <div class="title">B.S. in Technology</div>
+          <div class="org">Bowling Green State University</div>
         </div>
-      </section>
+        <div class="dates">2018</div>
+      </div>
+    </section>
 
-      <aside class="card">
-        <h2>Certifications</h2>
-        <ul class="bullets">
-          <li>Coursera — Cybersecurity Certificate (2024)</li>
-          <li>Certified Scrum Master (2022)</li>
-          <li>CompTIA Security+ (in progress)</li>
-        </ul>
-      </aside>
-    </main>
-
-    <p class="foot">Enable background graphics when printing to preserve the dark theme and neon highlights.</p>
+    <section class="card">
+      <h2>Certifications</h2>
+      <ul class="bullets">
+        <li>Coursera — Cybersecurity Certificate (2024)</li>
+        <li>Scrum Alliance — Certified Scrum Master (2022)</li>
+        <li>CompTIA Security+ — Expected 2025</li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
